--- a/flight_missions.ipynb
+++ b/flight_missions.ipynb
@@ -1554,6 +1554,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['USA', 'GREAT BRITAIN', nan, 'NEW ZEALAND', 'AUSTRALIA',\n",
+       "       'SOUTH AFRICA'], dtype=object)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get unique country flying mission\n",
+    "missions.COUNTRY_FLYING_MISSION.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSNDATE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COUNTRY_FLYING_MISSION</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>94165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GREAT BRITAIN</th>\n",
+       "      <td>31361</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEW ZEALAND</th>\n",
+       "      <td>633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUSTRALIA</th>\n",
+       "      <td>316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SOUTH AFRICA</th>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        MSNDATE\n",
+       "COUNTRY_FLYING_MISSION         \n",
+       "USA                       94165\n",
+       "GREAT BRITAIN             31361\n",
+       "NEW ZEALAND                 633\n",
+       "AUSTRALIA                   316\n",
+       "SOUTH AFRICA                 19"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country = missions.groupby('COUNTRY_FLYING_MISSION').count()['MSNDATE']\n",
+    "\n",
+    "# make a dataframe\n",
+    "country_df = pd.DataFrame(country)\n",
+    "\n",
+    "country_df = country_df.sort_values(by = 'MSNDATE', ascending = False)\n",
+    "\n",
+    "country_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
@@ -1907,6 +2013,16 @@
    "source": [
     "# query sql database to make sure data is correct\n",
     "pd.read_sql_query('select * from wwii_flight_missions', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save cleaned csv \n",
+    "missions_clean.to_csv(\"new_wwii_flights.csv\")"
    ]
   },
   {
