Newly Updated Flask

--- a/flight_missions.ipynb
+++ b/flight_missions.ipynb
@@ -6,241 +6,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import sqlite3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\rjd61\\anaconda3\\envs\\pythondata\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3044: DtypeWarning: Columns (14,48,49,51,52,59,60) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>WWII_ID</th>\n",
-       "      <th>MASTER_INDEX_NUMBER</th>\n",
-       "      <th>MSNDATE</th>\n",
-       "      <th>THEATER</th>\n",
-       "      <th>NAF</th>\n",
-       "      <th>COUNTRY_FLYING_MISSION</th>\n",
-       "      <th>TGT_COUNTRY_CODE</th>\n",
-       "      <th>TGT_COUNTRY</th>\n",
-       "      <th>TGT_LOCATION</th>\n",
-       "      <th>TGT_TYPE</th>\n",
-       "      <th>...</th>\n",
-       "      <th>CALLSIGN</th>\n",
-       "      <th>ROUNDS_AMMO</th>\n",
-       "      <th>SPARES_RETURN_AC</th>\n",
-       "      <th>WX_FAIL_AC</th>\n",
-       "      <th>MECH_FAIL_AC</th>\n",
-       "      <th>MISC_FAIL_AC</th>\n",
-       "      <th>TARGET_COMMENT</th>\n",
-       "      <th>MISSION_COMMENTS</th>\n",
-       "      <th>SOURCE</th>\n",
-       "      <th>DATABASE_EDIT_COMMENTS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8/15/1943</td>\n",
-       "      <td>MTO</td>\n",
-       "      <td>12 AF</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>ITALY</td>\n",
-       "      <td>SPADAFORA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4285</td>\n",
-       "      <td>20028.0</td>\n",
-       "      <td>2/20/1945</td>\n",
-       "      <td>PTO</td>\n",
-       "      <td>5 AF</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PHILIPPINE ISLANDS</td>\n",
-       "      <td>PUERTA PRINCESA</td>\n",
-       "      <td>UNIDENTIFIED TARGET</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8/15/1943</td>\n",
-       "      <td>MTO</td>\n",
-       "      <td>12 AF</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>ITALY</td>\n",
-       "      <td>COSENZA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8/15/1943</td>\n",
-       "      <td>MTO</td>\n",
-       "      <td>12 AF</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>ITALY</td>\n",
-       "      <td>GIOJA TAURO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8167</td>\n",
-       "      <td>14639.0</td>\n",
-       "      <td>2/23/1945</td>\n",
-       "      <td>PTO</td>\n",
-       "      <td>5 AF</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PHILIPPINE ISLANDS</td>\n",
-       "      <td>BALETE PASS</td>\n",
-       "      <td>WOODED AREA</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 62 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   WWII_ID  MASTER_INDEX_NUMBER    MSNDATE THEATER    NAF  \\\n",
-       "0        1                  NaN  8/15/1943     MTO  12 AF   \n",
-       "1     4285              20028.0  2/20/1945     PTO   5 AF   \n",
-       "2        3                  NaN  8/15/1943     MTO  12 AF   \n",
-       "3        4                  NaN  8/15/1943     MTO  12 AF   \n",
-       "4     8167              14639.0  2/23/1945     PTO   5 AF   \n",
-       "\n",
-       "  COUNTRY_FLYING_MISSION  TGT_COUNTRY_CODE         TGT_COUNTRY  \\\n",
-       "0                    USA              13.0               ITALY   \n",
-       "1                    USA               NaN  PHILIPPINE ISLANDS   \n",
-       "2                    USA              13.0               ITALY   \n",
-       "3                    USA              13.0               ITALY   \n",
-       "4                    USA               NaN  PHILIPPINE ISLANDS   \n",
-       "\n",
-       "      TGT_LOCATION             TGT_TYPE  ...  CALLSIGN  ROUNDS_AMMO  \\\n",
-       "0        SPADAFORA                  NaN  ...       NaN          NaN   \n",
-       "1  PUERTA PRINCESA  UNIDENTIFIED TARGET  ...       NaN          NaN   \n",
-       "2          COSENZA                  NaN  ...       NaN          NaN   \n",
-       "3      GIOJA TAURO                  NaN  ...       NaN          NaN   \n",
-       "4      BALETE PASS          WOODED AREA  ...       NaN          NaN   \n",
-       "\n",
-       "  SPARES_RETURN_AC WX_FAIL_AC MECH_FAIL_AC  MISC_FAIL_AC  TARGET_COMMENT  \\\n",
-       "0              NaN        NaN          NaN           NaN             NaN   \n",
-       "1              NaN        NaN          NaN           NaN             NaN   \n",
-       "2              NaN        NaN          NaN           NaN             NaN   \n",
-       "3              NaN        NaN          NaN           1.0             NaN   \n",
-       "4              NaN        NaN          NaN           NaN             NaN   \n",
-       "\n",
-       "  MISSION_COMMENTS SOURCE DATABASE_EDIT_COMMENTS  \n",
-       "0              NaN    NaN                    NaN  \n",
-       "1              NaN    NaN                    NaN  \n",
-       "2              NaN    NaN                    NaN  \n",
-       "3              NaN    NaN                    NaN  \n",
-       "4              NaN    NaN                    NaN  \n",
-       "\n",
-       "[5 rows x 62 columns]"
+       "<sqlite3.Connection at 0x216e6451b90>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read data\n",
-    "missions = pd.read_csv(\"wwii_flight_missions.csv\")\n",
+    "# missions = pd.read_csv(\"wwii_flight_missions.csv\")\n",
     "\n",
-    "missions.head()"
+    "missions = sqlite3.connect(r'wwii_flights')\n",
+    "\n",
+    "missions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_sql_query(\"SELECT * FROM wwii_flights\", missions)"
    ]
   },
   {
@@ -325,6 +126,229 @@
    "source": [
     "# get a list of the column names\n",
     "list(missions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MISSION_ID</th>\n",
+       "      <th>WWII_ID</th>\n",
+       "      <th>MASTER_INDEX_NUMBER</th>\n",
+       "      <th>MSNDATE</th>\n",
+       "      <th>THEATER</th>\n",
+       "      <th>NAF</th>\n",
+       "      <th>COUNTRY_FLYING_MISSION</th>\n",
+       "      <th>TGT_COUNTRY_CODE</th>\n",
+       "      <th>TGT_COUNTRY</th>\n",
+       "      <th>TGT_LOCATION</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TOTAL_LBS</th>\n",
+       "      <th>TOTAL_TONS</th>\n",
+       "      <th>TAKEOFF_BASE</th>\n",
+       "      <th>TAKEOFF_COUNTRY</th>\n",
+       "      <th>TAKEOFF_LATITUDE</th>\n",
+       "      <th>TAKEOFF_LONGITUDE</th>\n",
+       "      <th>BDA</th>\n",
+       "      <th>CALLSIGN</th>\n",
+       "      <th>ROUNDS_AMMO</th>\n",
+       "      <th>YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>1943-08-15</td>\n",
+       "      <td>MTO</td>\n",
+       "      <td>12 AF</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>13</td>\n",
+       "      <td>ITALY</td>\n",
+       "      <td>SPADAFORA</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>10</td>\n",
+       "      <td>PONTE OLIVO AIRFIELD</td>\n",
+       "      <td>SICILY</td>\n",
+       "      <td>37.131021999999994</td>\n",
+       "      <td>14.3215</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4285</td>\n",
+       "      <td>20028</td>\n",
+       "      <td>1945-02-20</td>\n",
+       "      <td>PTO</td>\n",
+       "      <td>5 AF</td>\n",
+       "      <td>USA</td>\n",
+       "      <td></td>\n",
+       "      <td>PHILIPPINE ISLANDS</td>\n",
+       "      <td>PUERTA PRINCESA</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "      <td>1943-08-15</td>\n",
+       "      <td>MTO</td>\n",
+       "      <td>12 AF</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>13</td>\n",
+       "      <td>ITALY</td>\n",
+       "      <td>COSENZA</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>9</td>\n",
+       "      <td>PONTE OLIVO AIRFIELD</td>\n",
+       "      <td>SICILY</td>\n",
+       "      <td>37.131021999999994</td>\n",
+       "      <td>14.3215</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td></td>\n",
+       "      <td>1943-08-15</td>\n",
+       "      <td>MTO</td>\n",
+       "      <td>12 AF</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>13</td>\n",
+       "      <td>ITALY</td>\n",
+       "      <td>GIOJA TAURO</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>PONTE OLIVO AIRFIELD</td>\n",
+       "      <td>SICILY</td>\n",
+       "      <td>37.131021999999994</td>\n",
+       "      <td>14.3215</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>8167</td>\n",
+       "      <td>14639</td>\n",
+       "      <td>1945-02-23</td>\n",
+       "      <td>PTO</td>\n",
+       "      <td>5 AF</td>\n",
+       "      <td>USA</td>\n",
+       "      <td></td>\n",
+       "      <td>PHILIPPINE ISLANDS</td>\n",
+       "      <td>BALETE PASS</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 46 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   MISSION_ID  WWII_ID MASTER_INDEX_NUMBER     MSNDATE THEATER    NAF  \\\n",
+       "0           0        1                      1943-08-15     MTO  12 AF   \n",
+       "1           1     4285               20028  1945-02-20     PTO   5 AF   \n",
+       "2           2        3                      1943-08-15     MTO  12 AF   \n",
+       "3           3        4                      1943-08-15     MTO  12 AF   \n",
+       "4           4     8167               14639  1945-02-23     PTO   5 AF   \n",
+       "\n",
+       "  COUNTRY_FLYING_MISSION TGT_COUNTRY_CODE         TGT_COUNTRY  \\\n",
+       "0                    USA               13               ITALY   \n",
+       "1                    USA                   PHILIPPINE ISLANDS   \n",
+       "2                    USA               13               ITALY   \n",
+       "3                    USA               13               ITALY   \n",
+       "4                    USA                   PHILIPPINE ISLANDS   \n",
+       "\n",
+       "      TGT_LOCATION ...  TOTAL_LBS TOTAL_TONS TAKEOFF_BASE TAKEOFF_COUNTRY  \\\n",
+       "0        SPADAFORA ...                                                      \n",
+       "1  PUERTA PRINCESA ...                                                      \n",
+       "2          COSENZA ...                                                      \n",
+       "3      GIOJA TAURO ...                                                      \n",
+       "4      BALETE PASS ...                                                      \n",
+       "\n",
+       "  TAKEOFF_LATITUDE     TAKEOFF_LONGITUDE     BDA            CALLSIGN  \\\n",
+       "0               10  PONTE OLIVO AIRFIELD  SICILY  37.131021999999994   \n",
+       "1                                                                      \n",
+       "2                9  PONTE OLIVO AIRFIELD  SICILY  37.131021999999994   \n",
+       "3              7.5  PONTE OLIVO AIRFIELD  SICILY  37.131021999999994   \n",
+       "4                                                                      \n",
+       "\n",
+       "  ROUNDS_AMMO YEAR  \n",
+       "0     14.3215       \n",
+       "1                   \n",
+       "2     14.3215       \n",
+       "3     14.3215       \n",
+       "4                   \n",
+       "\n",
+       "[5 rows x 46 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -2049,7 +2073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
